add page layout

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 ---
+layout: page
 title: "My Portfolio"
 sections:
   - education
@@ -9,27 +10,12 @@ sections:
   - contact
 ---
 
-<!DOCTYPE html>
-<html lang="en">
+{% for section in page.sections %}
+{% assign x = forloop.index | modulo: 2 %}
+{% if x  == 1 %}
+{% include {{section}}.html%}
+{% else %}
+{% include {{section}}.html classname="altbg"%}
+{% endif %}
 
-{% include head.html %}
-
-<body id="page-top">
-  {% include nav.html %}
-  {% include header.html %}
-
-  {% for section in page.sections %}
-  {% assign x = forloop.index | modulo: 2 %}
-  {% if x  == 1 %}
-  {% include {{section}}.html%}
-  {% else %}
-  {% include {{section}}.html classname="altbg"%}
-  {% endif %}
-  
-  
-  {% endfor %}
-
-  {% include scripts.html %}
-</body>
-
-</html>
+{% endfor %}
