add achievement page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: "My Portfolio"
+title: "Lim Li's Portfolio"
+description: "Year 3 NUS student, studying Computer Science & Applied Math double degree."
 sections:
   - education
   - experience
