--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@ layout: page
 title: "Lim Li's Portfolio"
 description: "<p>I'm currently a Software Engineer at Stripe.</p><p>I graduated from NUS CS/Applied Math with 1st Class Honours, and am interested in Competitive Programming.</p>"
 sections:
-  - education
   - experience
+  - education
+  - internships
   - achievements
   - skills
   - community
