--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "Lim Li's Portfolio"
-description: "<p>I'm currently a Software Engineer at Stripe.</p><p>I graduated from NUS CS/Applied Math with 1st Class Honours, and am interested in Competitive Programming.</p>"
+description: "<p>I'm currently a Software Engineer at Stripe.</p><p>I graduated from NUS CS/Applied Math with First Class Honours, and am interested in Competitive Programming.</p>"
 sections:
   - experience
   - education
