--- a/modules.html
+++ b/modules.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "Modules Taken"
-description: All the modules I've taken in NUS
+description: <p>All the modules I've taken in NUS</p>
 ---
 <section id="experience">
     <div class="container">
